--- a/tpe1/package.json
+++ b/tpe1/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "jquery": "3.2.1",
+    "popper.js": "1.12.5",
+    "bootstrap": "4.0.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
