--- a/tpe1/package.json
+++ b/tpe1/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
+    "bootstrap": "4.0.0-beta",
     "jquery": "3.2.1",
     "popper.js": "1.12.5",
-    "bootstrap": "4.0.0-beta"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "react-scripts": "1.0.14",
+    "reactstrap": "^5.0.0-alpha.3"
   },
   "scripts": {
     "start": "react-scripts start",
