--- a/tpe1/package.json
+++ b/tpe1/package.json
@@ -7,6 +7,9 @@
     "jquery": "3.2.1",
     "popper.js": "1.12.5",
     "react": "^15.0.0",
+    "react-bootstrap-modal": "^3.0.1",
+    "react-color": "^2.13.8",
+    "react-color-picker": "^4.0.2",
     "react-dom": "^15.0.0",
     "react-scripts": "1.0.14",
     "reactstrap": "^5.0.0-alpha.3"
