--- a/tpe1/package.json
+++ b/tpe1/package.json
@@ -12,6 +12,7 @@
     "react-color-picker": "^4.0.2",
     "react-dom": "^15.0.0",
     "react-scripts": "1.0.14",
+    "react-simplert": "0.0.2",
     "reactstrap": "^5.0.0-alpha.3"
   },
   "scripts": {
