--- a/tpe2/app/src/main/AndroidManifest.xml
+++ b/tpe2/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:name=".views.RoomActivity"
             android:label="@string/title_activity_room"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".views.NewRoom" android:label="@string/new_room">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.falopa.smarthome.views.NewRoom" />
+        </activity>
     </application>
 
 </manifest>
